# cs-algo1

./: README.md
Labos/Latex/: gitignore_file  tallerLatex.aux  tallerLatex.tex  tallerLatex1.3.aux  tallerLatex1.3.tex
Labos/labo01/: CMakeLists.txt  Eje1.cpp  Eje2.cpp  Eje3.cpp  Eje4.cpp  Eje5.cpp  Eje6.cpp  Eje7.cpp  Eje8.cpp
Labos/labo02/: CMakeLists.txt  eje01.cpp  eje02.cpp  eje03.cpp  eje04.cpp
Labos/labo03/: Apariciones  CMakeLists.txt  guardadoVectores  labo03
Labos/labo03/src/: entradaSalida.cpp  entradaSalida.h  generador.cpp  main.cpp  vectores.cpp  vectores.h
Labos/labo04/: CMakeLists.txt  cases.cpp  ejercicios.cpp  ejercicios.h  laboDebugging  main.cpp
Labos/labo04/datos/: SensadoRemoto.txt
Labos/labo05/: ejercicios.cpp  ejercicios.h  laboCiclos  main.cpp
Labos/labo06/: CMakeLists.txt
Labos/labo06/ej1/Test/: puntajeTEST.cpp
Labos/labo06/ej3/: baldosasDelPiso.cpp
Labos/labo07/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labos/labo08/: CMakeLists.txt  strings
Labos/labo08/src/: ejercicios.cpp  ejercicios.h
Labos/labo09/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  graficar.py  main.cpp
Labos/labo10/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labos/labo10/lib/googletest-master/googletest/src/: gtest-death-test.cc
Labos/labo10/tests/: buscarTEST.cpp  menorMasGrandeTEST.cpp
Labos/labo11/anagramas/src/: anagramas  main.cpp
Labos/labo11/bin-package/src/: CMakeLists.txt  main.cpp
TPs/: README.md
