cmake_minimum_required(VERSION 3.23)
project(labo01)

set(CMAKE_CXX_STANDARD 14)

add_executable(Exe1 Eje1.cpp)
add_executable(Exe2 Eje2.cpp)
add_executable(Exe3 Eje3.cpp)
add_executable(Exe4 Eje4.cpp)
add_executable(Exe5 Eje5.cpp)
add_executable(Exe6 Eje6.cpp)
add_executable(Exe7 Eje7.cpp)
add_executable(Exe8 Eje8.cpp)